--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flip_card
-description: A package for flip card animation.
-version: 0.2.0
+description: A component that provides flip card animation. It could be used for hide and show details of a product.
+version: 0.2.1
 author: fedeoo <fedeoo.zf@gmail.com>
 homepage: https://github.com/fedeoo/flip_card/
 
