Remove unused assets

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -60,9 +60,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/front.jpeg
-    - images/back.jpeg
+  # assets:
+  #   - images/front.jpeg
+  #   - images/back.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
