Use Flutter Version Manager

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@
 .pub/
 build/
 
+# Flutter Version Manager
+.fvm/flutter_sdk
+
 # Android related
 **/android/**/gradle-wrapper.jar
 **/android/.gradle
