VSCode: Exclude flutter version manager from search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "dart.flutterSdkPath": ".fvm/flutter_sdk"
+  "dart.flutterSdkPath": ".fvm/flutter_sdk",
+  "search.exclude": {
+    // Remove .fvm files from search
+    "**/.fvm": true
+  }
 }
